lib/stratiform/res/test/stratiform/corpus/pos/literal-atom-cr-preserved.tel
code
      END
first
second
third
      END
