lib/stratiform/res/test/stratiform/corpus/neg/e114-duplicate-literal.tel
code
      EOF
first
      EOF
      END
second
